<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Cadastro_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/idToolbarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Cadastro"
            app:titleTextColor="#fff">

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_below="@id/idToolbarCadastro"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/cImgUsu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_photo_profile" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/background_cadastro"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/idCodclientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/cNome_Sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_cadastro"
                    android:hint="@string/nome_e_sobrenome"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#009f35"
                    android:textColorHint="#A1009F35"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_cadastro"
                    android:hint="@string/cpf"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#009f35"
                    android:textColorHint="#A1009F35"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_cadastro"
                    android:hint="@string/telefone"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="#009f35"
                    android:textColorHint="#A1009F35"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/cEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_cadastro"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#009f35"
                    android:textColorHint="#A1009F35"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_cadastro"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#009f35"
                    android:textColorHint="#A1009F35"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/RealizarLogin"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="25dp"
                        android:text="@string/realizar_login"
                        android:textAlignment="center"
                        android:textColor="#009f35"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/btnCadastrar"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_entrar"
                        android:text="@string/cadastrar"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/idPBCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>