<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cad_Coletor_Activity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="40dp"
            android:layout_centerVertical="true"
            android:layout_height="33dp"
            android:background="#00FFFFFF"
            android:drawableLeft="@drawable/ic_arrow_menu"/>
        <androidx.appcompat.widget.Toolbar
            android:layout_toRightOf="@id/btnVoltar"
            android:id="@+id/idToolbarCadColetor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Você Sabia?"
            app:titleTextColor="#fff"
            android:layout_toEndOf="@id/btnVoltar" />
        <View
            android:layout_below="@id/idToolbarCadColetor"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/quer_se_cadastrar_ncomo_coletor"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insira_seu_e_mail"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:background="@drawable/background_cadastro"
            android:textSize="28sp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btnCadColetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_entrar"
            android:layout_marginTop="15dp"
            android:text="@string/cadastrar"
            android:textColor="#fff"
            android:padding="20dp"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>